<resources>
    <string name="app_name">AtackOnTitanApi</string>
    <string name="title_error_connection">Sin conexión</string>
    <string name="description_error_connection">Comprueba tu conexión a internet e inténtalo de nuevo.</string>
    <string name="title_error_server">Error del servidor</string>
    <string name="description_error_server">Ha ocurrido un error. Por favor, inténtalo más tarde.</string>
    <string name="retry">Reintentar</string>
    <string name="error_icon">Icono de error</string>
    <string name="empty_list">No hay personajes disponibles</string>
    <string name="character_avatar">Avatar del personaje</string>
    <string name="label_species">Species</string>
    <string name="label_gender">Gender</string>
    <string name="label_age">Age</string>
    <string name="label_height">Height</string>
    <string name="age_years">%d years</string>
</resources>